--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://https://luch3nz0.github.io/global-gateway-assist/",
+  "homepage": "https://luch3nz0.github.io/global-gateway-assist/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
